[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/bg2.png" type="Texture" id=1]
[ext_resource path="res://images/loading.png" type="Texture" id=2]
[ext_resource path="res://Controls.gd" type="Script" id=3]
[ext_resource path="res://Spinner.gd" type="Script" id=4]
[ext_resource path="res://MultiPull.gd" type="Script" id=5]

[node name="MultiPull" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.254902 )

[node name="Scryfall" type="HTTPRequest" parent="."]

[node name="CardDownload" type="HTTPRequest" parent="."]

[node name="Controls" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -296.5
margin_top = -246.5
margin_right = 296.5
margin_bottom = 246.5
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.137255, 0.137255, 0.784314 )

[node name="GetCard" type="Button" parent="Controls"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 89.5
margin_top = -169.5
margin_right = 174.5
margin_bottom = -144.5
text = "Get Card"

[node name="Grid" type="GridContainer" parent="Controls"]
margin_left = 22.0
margin_top = 87.0
margin_right = 237.0
margin_bottom = 248.0
custom_constants/vseparation = 20
custom_constants/hseparation = 8
columns = 2

[node name="ManaLabel" type="Label" parent="Controls/Grid"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
text = "Mana Value"
align = 2
valign = 1

[node name="ManaControls" type="HBoxContainer" parent="Controls/Grid"]
margin_left = 81.0
margin_right = 215.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="CheckButton" type="CheckBox" parent="Controls/Grid/ManaControls"]
margin_right = 52.0
margin_bottom = 24.0
pressed = true
text = "Any"

[node name="ManaValue" type="SpinBox" parent="Controls/Grid/ManaControls"]
margin_left = 60.0
margin_right = 134.0
margin_bottom = 24.0
size_flags_vertical = 4
max_value = 16.0
editable = false

[node name="ColorLabel" type="Label" parent="Controls/Grid"]
margin_top = 47.0
margin_right = 73.0
margin_bottom = 61.0
text = "Color"
align = 2

[node name="Color" type="OptionButton" parent="Controls/Grid"]
margin_left = 81.0
margin_top = 44.0
margin_right = 215.0
margin_bottom = 64.0
size_flags_vertical = 4
text = "Color"

[node name="TypeLabel" type="Label" parent="Controls/Grid"]
margin_top = 87.0
margin_right = 73.0
margin_bottom = 101.0
text = "Card Type"
align = 2
valign = 1

[node name="Type" type="OptionButton" parent="Controls/Grid"]
margin_left = 81.0
margin_top = 84.0
margin_right = 215.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Type"

[node name="RarityLabel" type="Label" parent="Controls/Grid"]
margin_top = 127.0
margin_right = 73.0
margin_bottom = 141.0
text = "Rarity"
align = 2
valign = 1

[node name="Rarity" type="OptionButton" parent="Controls/Grid"]
margin_left = 81.0
margin_top = 124.0
margin_right = 215.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Rarity"

[node name="SetContainer" type="VBoxContainer" parent="Controls"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -178.5
margin_right = -16.0
margin_bottom = 194.5

[node name="SetLabel" type="Label" parent="Controls/SetContainer"]
margin_right = 324.0
margin_bottom = 14.0
text = "Set"
align = 1

[node name="SetList" type="ItemList" parent="Controls/SetContainer"]
margin_top = 18.0
margin_right = 324.0
margin_bottom = 373.0
size_flags_horizontal = 3
size_flags_vertical = 3
same_column_width = true

[node name="Title" type="Label" parent="Controls"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.5
margin_top = 19.0
margin_right = 98.5
margin_bottom = 33.0
text = "Trailblazer Card Generator"
align = 1

[node name="Fail" type="Label" parent="Controls"]
visible = false
margin_left = 28.5
margin_top = 354.5
margin_right = 236.5
margin_bottom = 402.5
custom_colors/font_color = Color( 1, 0.403922, 0.403922, 1 )
text = "Card request failed"
align = 1
autowrap = true

[node name="Fail2" type="Label" parent="Controls"]
visible = false
margin_left = 27.5
margin_top = 354.5
margin_right = 235.5
margin_bottom = 402.5
custom_colors/font_color = Color( 1, 0.403922, 0.403922, 1 )
text = "No valid cards found"
align = 1
autowrap = true

[node name="CardHistoryToggle" type="CheckButton" parent="Controls"]
margin_left = 41.5
margin_top = 400.5
margin_right = 236.5
margin_bottom = 440.5
pressed = true
text = "Show Card History"

[node name="BanlistToggle" type="CheckButton" parent="Controls"]
visible = false
margin_left = 22.5
margin_top = 338.5
margin_right = 236.5
margin_bottom = 378.5
pressed = true
text = "Show Custom Banlist"

[node name="CardHistory" type="TextEdit" parent="Controls"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 24.5
margin_top = -280.0
margin_right = 214.5
margin_bottom = 300.0
readonly = true
show_line_numbers = true

[node name="Banlist" type="TextEdit" parent="Controls"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -215.5
margin_top = -280.0
margin_right = -25.5
margin_bottom = 300.0
show_line_numbers = true

[node name="BanlistLabel" type="Label" parent="Controls"]
visible = false
anchor_left = -0.204
anchor_top = -0.116
anchor_right = -0.204
anchor_bottom = -0.116
margin_left = -48.528
margin_top = -17.184
margin_right = 48.472
margin_bottom = -3.184
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Custom Banlist"
align = 1

[node name="HistoryLabel" type="Label" parent="Controls"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 74.5
margin_top = -296.0
margin_right = 171.5
margin_bottom = -282.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Card History"
align = 1

[node name="ClearHistory" type="Button" parent="Controls"]
visible = false
margin_left = 84.5
margin_top = 415.5
margin_right = 178.5
margin_bottom = 435.5
text = "Clear History"

[node name="Legendary" type="CheckBox" parent="Controls"]
margin_left = 79.5
margin_top = 247.5
margin_right = 188.5
margin_bottom = 271.5
text = "Is Legendary"

[node name="MainMenu" type="Button" parent="Controls"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -89.5
margin_top = 8.5
margin_right = -6.5
margin_bottom = 28.5
text = "Main Menu"

[node name="InfoLabel" type="Label" parent="Controls"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.0
margin_top = 38.5
margin_right = 96.0
margin_bottom = 52.5
text = "Format: ?"
align = 1

[node name="CardSelection" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CardPos1" type="Position2D" parent="CardSelection"]
position = Vector2( 170, 300 )

[node name="CardPos2" type="Position2D" parent="CardSelection"]
position = Vector2( 512, 300 )

[node name="CardPos3" type="Position2D" parent="CardSelection"]
position = Vector2( 852, 300 )

[node name="Take1" type="Button" parent="CardSelection"]
visible = false
margin_left = 134.0
margin_top = 496.0
margin_right = 207.0
margin_bottom = 516.0
text = "Take Card"

[node name="Take2" type="Button" parent="CardSelection"]
visible = false
margin_left = 475.0
margin_top = 496.0
margin_right = 548.0
margin_bottom = 516.0
text = "Take Card"

[node name="Take3" type="Button" parent="CardSelection"]
visible = false
margin_left = 816.0
margin_top = 496.0
margin_right = 889.0
margin_bottom = 516.0
text = "Take Card"

[node name="Spinner" type="Sprite" parent="."]
visible = false
position = Vector2( 410, 391 )
scale = Vector2( 0.163125, 0.163125 )
texture = ExtResource( 2 )
script = ExtResource( 4 )

[connection signal="pressed" from="Controls/GetCard" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Controls/Grid/ManaControls/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Controls/Grid/ManaControls/CheckButton" to="Controls" method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Controls/CardHistoryToggle" to="." method="_on_CardHistoryToggle_toggled"]
[connection signal="toggled" from="Controls/BanlistToggle" to="." method="_on_BanlistToggle_toggled"]
[connection signal="pressed" from="Controls/ClearHistory" to="." method="_on_ClearHistory_pressed"]
[connection signal="pressed" from="Controls/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="CardSelection/Take1" to="." method="_on_Take1_pressed"]
[connection signal="pressed" from="CardSelection/Take2" to="." method="_on_Take2_pressed"]
[connection signal="pressed" from="CardSelection/Take3" to="." method="_on_Take3_pressed"]
